--- a/projectp/application.properties
+++ b/projectp/application.properties
@@ -1,9 +1,14 @@
 #Grails Metadata file
-#Wed Jun 20 16:44:59 CEST 2012
+#Fri Jun 22 11:19:06 CEST 2012
 app.grails.version=2.0.4
 app.name=projectp
 app.servlet.version=2.5
 app.version=0.1
 plugins.ajax-uploader=1.1
+plugins.jquery-ui=1.8.15
+plugins.modernizr=1.7.2
+plugins.rest-client-builder=1.0.2
 plugins.spring-security-acl=1.1
 plugins.spring-security-core=1.2.7.3
+plugins.svn=1.0.0.M1
+plugins.uploadr=0.5.10
