--- a/projectp/.settings/org.eclipse.core.resources.prefs
+++ b/projectp/.settings/org.eclipse.core.resources.prefs
@@ -1,9 +1,11 @@
 eclipse.preferences.version=1
-encoding//.link_to_grails_plugins/ajax-uploader-1.1/grails-app/i18n=UTF-8
-encoding//.link_to_grails_plugins/ajax-uploader-1.1/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/hibernate-2.0.3/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/jquery-1.7.1/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/jquery-1.7.1/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/jquery-ui-1.8.15/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/jquery-ui-1.8.15/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/modernizr-1.7.2/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/modernizr-1.7.2/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n=UTF-8
@@ -12,6 +14,8 @@ encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n/s
 encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n/spring-security-core_fr.properties=UTF-8
 encoding//.link_to_grails_plugins/twitter-bootstrap-2.0.1.22/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/twitter-bootstrap-2.0.1.22/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/uploadr-0.5.10/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/uploadr-0.5.10/grails-app/i18n/messages.properties=UTF-8
 encoding//grails-app/i18n=UTF-8
 encoding//grails-app/i18n/messages.properties=UTF-8
 encoding//grails-app/i18n/messages_cs_CZ.properties=UTF-8
