Change-Id: If5776a91b6ee45deaec585ec894723adf130c606

--- a/fdup/fdup/.classpath
+++ b/fdup/fdup/.classpath
@@ -122,27 +122,17 @@
 			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path=".link_to_grails_plugins/pdf-0.6/grails-app/controllers">
+	<classpathentry kind="src" path=".link_to_grails_plugins/rendering-0.4.3/grails-app/services">
 		<attributes>
 			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path=".link_to_grails_plugins/pdf-0.6/grails-app/i18n">
+	<classpathentry kind="src" path=".link_to_grails_plugins/rendering-0.4.3/grails-app/taglib">
 		<attributes>
 			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path=".link_to_grails_plugins/pdf-0.6/grails-app/services">
-		<attributes>
-			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" path=".link_to_grails_plugins/pdf-0.6/grails-app/taglib">
-		<attributes>
-			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" path=".link_to_grails_plugins/pdf-0.6/grails-app/views">
+	<classpathentry kind="src" path=".link_to_grails_plugins/rendering-0.4.3/src/groovy">
 		<attributes>
 			<attribute name="com.springsource.sts.grails.core.SOURCE_FOLDER" value="true"/>
 		</attributes>
